--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Photo Gallery</title>
+    <title>Photo Blog</title>
+    <link rel="stylesheet" href="photo.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <p>My fovorite cars</p>
+    <img src="pictures/images-1.jpg" alt="1 picture" />
+    <img src="pictures/images-10.jpg" alt="2 picture" />
+    <img src="pictures/images-11.jpg" alt="3 picture" />
+    <img src="pictures/images-12.jpg" alt="4 picture" />
+    <img src="pictures/images-13.jpg" alt="5 picture" />
+    <img src="pictures/images-14.jpg" alt="6 picture" />
+    <img src="pictures/images-15.jpg" alt="7 picture" />
+    <img src="pictures/images-16.jpg" alt="8 picture" />
+    <img src="pictures/images-17.jpg" alt="9 picture" />
+  </body>
 </html>
