rename folder. styling

--- a/blogHome.html
+++ b/blogHome.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <h3><a href="photo.html">Available today</a></h3>
     <div class="blog_post">
       <p id="date">NOVEMBER 23 2015</p>
       <h2>This Is My First Article</h2>
@@ -37,7 +38,7 @@
     </div>
     <div class="blog_post">
       <p id="date">DECEMBER 11 2015</p>
-      <h2>This Is My Another Article</h2>
+      <h2>This Is Another Article</h2>
       <p class="with_left_border">
         De carne cerebro lumbering animata cervello corpora quaeritis. Summus
         thalamus brains sit​​, morbo basal ganglia vel maleficia? De braaaiiiins
