--- a/photo.html
+++ b/photo.html
@@ -12,15 +12,15 @@
     />
   </head>
   <body>
-    <p>My fovorite cars</p>
-    <img src="pictures/images-1.jpg" alt="1 picture" />
-    <img src="pictures/images-10.jpg" alt="2 picture" />
-    <img src="pictures/images-11.jpg" alt="3 picture" />
-    <img src="pictures/images-12.jpg" alt="4 picture" />
-    <img src="pictures/images-13.jpg" alt="5 picture" />
-    <img src="pictures/images-14.jpg" alt="6 picture" />
-    <img src="pictures/images-15.jpg" alt="7 picture" />
-    <img src="pictures/images-16.jpg" alt="8 picture" />
-    <img src="pictures/images-17.jpg" alt="9 picture" />
+    <p>Cars in the garage</p>
+    <img src="images/images-1.jpg" alt="1 picture" />
+    <img src="images/images-10.jpg" alt="2 picture" />
+    <img src="images/images-11.jpg" alt="3 picture" />
+    <img src="images/images-12.jpg" alt="4 picture" />
+    <img src="images/images-13.jpg" alt="5 picture" />
+    <img src="images/images-14.jpg" alt="6 picture" />
+    <img src="images/images-15.jpg" alt="7 picture" />
+    <img src="images/images-16.jpg" alt="8 picture" />
+    <img src="images/images-17.jpg" alt="9 picture" />
   </body>
 </html>
