--- a/photo.html
+++ b/photo.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <p>Cars in the garage</p>
+    <h3><a href="index.html">Go back</a></h4>
     <img src="images/images-1.jpg" alt="1 picture" />
     <img src="images/images-10.jpg" alt="2 picture" />
     <img src="images/images-11.jpg" alt="3 picture" />
